[gd_scene load_steps=6 format=3 uid="uid://hcgaog1ibia8"]

[ext_resource type="Script" uid="uid://cnkhqueulc6gu" path="res://Scripts/level_1.gd" id="1_ovj6s"]
[ext_resource type="PackedScene" uid="uid://c5o4fhjssrhfe" path="res://Scenes/player.tscn" id="2_8qsmg"]
[ext_resource type="PackedScene" uid="uid://cs72i0sdbso1h" path="res://Scenes/lose.tscn" id="3_fphuk"]
[ext_resource type="Texture2D" uid="uid://ladsy23h3r5j" path="res://Assets/tile_0093.png" id="4_pnnky"]
[ext_resource type="PackedScene" uid="uid://cym4remhjs6kb" path="res://Scenes/killed_enemies_bar.tscn" id="5_blpqv"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_ovj6s")
level_number = 2

[node name="Player" parent="." instance=ExtResource("2_8qsmg")]
position = Vector2(576, 317)

[node name="TimeTimer" type="Timer" parent="."]
process_mode = 1
autostart = true

[node name="TimeLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 30
text = "10"
metadata/_edit_use_anchors_ = true

[node name="MoneyLabel" type="Label" parent="."]
offset_left = 1083.0
offset_right = 1152.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 30
text = "1000"

[node name="Lose" parent="." instance=ExtResource("3_fphuk")]
offset_left = 566.0
offset_top = 393.0
offset_right = 566.0
offset_bottom = 393.0

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CoinSprite" type="Sprite2D" parent="."]
position = Vector2(1071, 21.999998)
scale = Vector2(1.7, 1.7)
texture = ExtResource("4_pnnky")

[node name="KilledEnemiesBar" parent="." instance=ExtResource("5_blpqv")]
offset_top = 41.0
offset_right = 174.0
offset_bottom = 68.0

[connection signal="timeout" from="TimeTimer" to="." method="_on_time_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
